# COMP-3150-Coffee-Maker-Project

./: .gitignore  CMakeLists.txt  CoffeeMaker.cpp  CoffeeMaker.h  config.ini  main.cpp
components/: Boiler.h  FilterBasket.h  Heater.h  Indicator.h  Sensor.h  Tank.h
components/type/: Component.h  ComponentType.h
consumables/: CoffeeFilter.h  CoffeeGrinds.h
consumables/type/: Consumable.h  ConsumableType.h
enum/: BrewStrength.h
helpers/: ConfigParser.h  ProgressBar.h
logging/: ContextLogger.cpp  ContextLogger.h
old/: CoffeeMaker.cpp  CoffeeMaker.h  Loop.h
old/additives/: CinnamonAdditive.cpp  CinnamonAdditive.h  CoffeeAdditive.h  MochaAdditive.cpp  MochaAdditive.h  WhippedCreamAdditive.cpp  WhippedCreamAdditive.h
old/components/containers/: Boiler.cpp  Boiler.h  Carafe.cpp  Carafe.h  Tank.h
old/components/heaters/: BaseHeater.cpp  BaseHeater.h
old/components/indicators/: BrewIndicatorLight.cpp  BrewIndicatorLight.h  Indicator.h  PlateIndicator.cpp  PlateIndicator.h
old/components/sensors/: LogicalSensor.h  PlateSensor.cpp  PlateSensor.h
old/components/valves/: ReliefValve.cpp  ReliefValve.h  SprayControlValve.cpp  SprayControlValve.h  Valve.h
old/consumables/: CoffeeFilter.cpp  CoffeeFilter.h  CoffeeGrinds.cpp  CoffeeGrinds.h  Consumable.h
old/enums/: BrewStatus.h  BrewStrength.h
status/: IndicatorStatus.h  TankStatus.h
types/: BrewConfig.h
